<resources>
    <string name="app_name">Explore My City</string>
    <string name="set_as_background">Set As Wallpaper</string>
    <string name="internet">Please Connect The Internet and Restart The Application. Thanks</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Explore my city App</string>
    <string name="nav_header_subtitle">surajrawat1709@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Titile">Wallpapers</string>
    <string name="note">Set Wallpaper</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="preview">Preview</string>
    <string name="privacy_message"><b>We are committed to protecting your privacy</b> \n\n We collect the minimum amount of
        information about you that is commensurate with providing you with a satisfactory service. This policy indicates the
        type of processes that may result in data being collected about you. Your use of this website gives us the right to
        collect that information. \n\n  <b>Information Collected</b> \n\n  We may collect any or all of the information that
        you give us depending on the type of transaction you enter into, including your name, address, telephone number,
        and email address, together with data about your use of the website. Other information that may be needed from time
        to time to process a request may also be collected as indicated on the website. \n\n <b>Information Use</b> \n\n
        use the information collected primarily to process the task for which you visited the website. Data collected in the
        UK is held in accordance with the Data Protection Act. All reasonable precautions are taken to prevent unauthorised
        access to this information. This safeguard may require you to provide additional forms of identity should you wish to
        obtain information about your account details. \n\n <b>Cookies</b> \n\n Your Internet browser has the in-built facility
        for storing small files - \"cookies\" - that hold information which allows a website to recognise your account.
        Our website takes advantage of this facility to enhance your experience. You have the ability to prevent your computer
        from accepting cookies but, if you do, certain functionality on the website may be impaired. \n\n <b>Disclosing
            Information</b> \n\n We do not disclose any personal information obtained about you from this website to third
        parties unless you permit us to do so by ticking the relevant boxes in registration or competition forms. We may
        also use the information to keep in contact with you and inform you of developments associated with us. You will be
        given the opportunity to remove yourself from any mailing list or similar device. If at any time in the future we sh
        ould wish to disclose information collected on this website to any third party, it would only be with your knowledge
        and consent.   We may from time to time provide information of a general nature to third parties -
        for example, the number of individuals visiting our website or completing a registration form, but we will not
        use any information that could identify those individuals.   In addition Dummy may work with third parties for
        the purpose of delivering targeted behavioural advertising to the Dummy website. Through the use of cookies, anonymous
        information about your use of our websites and other websites will be used to provide more relevant adverts
        about goods and services of interest to you. For more information on online behavioural advertising and about how
        to turn this feature off, please visit youronlinechoices.com/opt-out. \n\n <b>Changes to this Policy</b> \n\n Any
        changes to our Privacy Policy will be placed here and will supersede this version of our policy.
        We will take reasonable steps to draw your attention to any changes in our policy. However, to be on the safe side,
        we suggest that you read this document each time you use the website to ensure that it still meets with your approval.
        \n\n <b>Contacting Us</b> \n\n If you have any questions about our Privacy Policy, or if you want to know what information
        we have collected about you, please email us at. You can also correct any factual errors in that information or require us to remove your details form any list under our control.</string>
    <string name="learn_garwali_language">Learn Garwali Language</string>
    <string name="numbers">Numbers</string>
    <string name="family_members">Family Members</string>
    <string name="colours">Colours</string>
    <string name="phrases">Phrases</string>
    <string name="title_activity_phrases">PhrasesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="learn_local_language">Learn Local Language</string>
</resources>
